<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tip"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="18sp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:text="@string/tip"/>

    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="2.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="2.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/fontSizeTip"/>

            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/standardFontSizeTip"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="32sp"
                android:text="@string/fontSizeTip"/>
            <TextView
                android:layout_weight="2.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <SeekBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/scale"
            android:thumb="@drawable/shape_circle"
            android:progressDrawable="@android:color/transparent"
            android:max="160"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:layout_marginHorizontal="25dp"
            android:progress="20" />
    </LinearLayout>
</LinearLayout>
