<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusableInTouchMode="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:background="@drawable/relativelayout">

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/searchTip"
            android:inputType="text"
            android:background="@drawable/search_textview" />
    </RelativeLayout>

    <ListView
        android:layout_weight="1"
        android:id="@+id/showList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:background="@android:color/white">

    </ListView>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_weight="4.9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:paddingTop="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mainMenu1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/createBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/add" />
                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="1.2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newButton"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/menuBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu" />
                <TextView
                    android:layout_marginTop="1.2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/menuButton"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainMenu2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/del" />
                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="1.2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deleteButton"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/selectAllBox"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />
                <TextView
                    android:layout_marginTop="1.2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/selectAllCheckBox"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
