<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper">

    <TextView
        android:id="@+id/contentDateShow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        />

    <EditText
        android:id="@+id/contentShow"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:gravity="top"
        android:background="@null"
        android:cursorVisible="false"/>

    <LinearLayout
        android:background="@drawable/relativelayout"
        android:layout_weight="5.6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/showModeMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:background="@drawable/paperbottom">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/shareBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/share" />
                <TextView
                    android:layout_marginTop="1.2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/shareButton"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/delBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/del" />
                <TextView
                    android:layout_marginTop="1.2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/deleteButton"/>
            </LinearLayout>
        </LinearLayout>

        <!--编辑模式时的菜单-->
        <LinearLayout
            android:id="@+id/editModeMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@drawable/paperbottom">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cancel" />
                <TextView
                    android:layout_marginTop="1.2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/cancelButton"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/saveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/save" />
                <TextView
                    android:layout_marginTop="1.2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/saveButton"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>